# Cocus_Enterprise_MVP_ML_LLM_RAG_System

./: .env.example  .env.template  .gitignore  .safety-policy.yml  Makefile  README.md  demo_presentation.py  main.py  pyproject.toml  requirements-dev.txt  requirements-slim.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  ml-pipeline.yml  security-scan.yml  test.yml  train_model.yml
data/raw/: orders_sample.ndjson
docker/: Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.slim  Dockerfile.ultra-slim  docker-compose.yml  nginx.conf
docs/: CHALLENGE_QA.md  COMPLETE_REQUIREMENTS_QA.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  MVP_COMPLETION_SUMMARY.md  PART2_DELIVERABLES_SUMMARY.md  PRESENTATION_README.md  QUICK_START.md  README.md  REQUIREMENTS_GAP_ANALYSIS.md  SECURE_API_KEYS.md  SIZE_OPTIMIZATION.md  WHEN_TO_SAVE_SECRETS.md  presentation.md
docs/EU AI ACT & GDPR Compliance/: COMPLIANCE_STRATEGY.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md
frontend/: chat-ui.html  package.json
models/: anomaly_detection.onnx  anomaly_detection_demo.json  anomaly_detection_metadata.json
notebooks/: Complete_ML_Pipeline_Andrew_Ng.ipynb
scripts/: auto_train.sh  data_quality_analysis.py  index_documents.py  open-chat.sh  process_data_gdpr.py  quick-start.sh  reindex.sh  run.sh  run_business_questions.py  setup.sh  setup_server_secrets.sh  train_ml_model.py  train_ml_model_real.py
scripts/utils/: test-all.sh  (+2 more)
src/: __init__.py
tests/: conftest.py  test_huggingface.py
(+53 files in other folders)
